--- a/form.html
+++ b/form.html
@@ -6,12 +6,13 @@
 </head>
 <body>
     <h2>Login Form</h2>
-    <form action="login.php" method="post">
+    <form action="form.php" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="Login">
+        
     </form>
 </body>
 </html>
